# taskdantic

./: .gitignore  .tmuxp.yaml  CONFIG_SPEC.md  INTEGRATION_GUIDE.md  README.md  README_UDA_FINAL.md  README_UDA_INHERITANCE.md  devenv.nix  pyproject.toml
examples/: .taskrc  basic_usage.py  basic_usage_updated.py  mixin_usage.py  uda_inheritance_usage.py  uda_usage.py  uda_usage_final.py
examples/udas/: tasks_agile.py  tasks_conflict.py  tasks_finance.py  tasts_extras.py
src/taskdantic/: __init__.py  advanced_config_example.py  basic_usage.py  cli.py  config.py  config_models.py  config_writer.py  enums.py  exceptions.py  models.py  models_final.py  models_uda_inheritance.py  serializers.py  services.py  task_factory.py  task_types.py  taskdantic.yaml  taskdantic_advanced.yaml  types.py  uda.py  uda_discovery.py  uda_export.py  uda_mixins.py  uda_registry.py  uda_sync.py  uda_taskrc.py  utils.py  warrior.py  yaml_config_example.py
tests/: conftest.py  sample_data.py  task_factory.py  test_annotation.py  test_cli.py  test_config.py  test_config_models.py  test_config_models_final.py  test_config_writer.py  test_config_writer_final.py  test_config_yaml.py  test_config_yaml_final.py  test_enums.py  test_integration.py  test_mixins.py  test_models.py  test_service.py  test_task.py  test_task_normalization.py  test_types.py  test_uda.py  test_uda_discovery.py  test_uda_inheritance.py  test_uda_inheritance_final.py  test_uda_integration.py  test_uda_registry.py  test_uda_sync.py  test_uda_taskrc.py  test_utils.py
