[project]
name = "template-py"
version = "0.1.0"
description = "A Python project template with modern tooling."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

dependencies = [
  "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "mypy>=1.10",
  "ruff>=0.5.0",
]

#[project.urls]
#homepage = "https://github.com/Bullish-Design/template-py"
#repository = "https://github.com/Bullish-Design/template-py.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatch which package to ship (your code lives in src/template_py)
packages = ["src/template_py"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
#  "SPEC.md",
#  "docs",
  "tests",
  "pyproject.toml",
]

[tool.uv]
# Keep the default behavior; this section is here so you can extend it later if needed.

[tool.pytest.ini_options]
addopts = "-q --cov=embeddify --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
packages = ["src/template_py"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

