[project]
name = "taskdantic"
version = "0.1.0"
description = "Pydantic models for Taskwarrior JSON format"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.extra-build-dependencies]
taskdantic = ["hatchling"]


[project.scripts]
taskdantic = "taskdantic.cli:cli"

[tool.ruff]
line-length = 120
target-version = "py311"
